--- a/Green website/404.html
+++ b/Green website/404.html
@@ -7,6 +7,10 @@
     <title>404 | EcoSmart Waste Management</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="Green Website Icon on Gradient Square (1).png">
+
+    <!-- Auto-redirect to index.html after 5 seconds -->
+    <meta http-equiv="refresh" content="5; url=index.html">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +40,7 @@
         .error-container p {
             font-size: 1.2rem;
             color: #333;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .btn-home {
@@ -47,6 +51,8 @@
             text-decoration: none;
             font-weight: bold;
             transition: 0.3s ease;
+            display: inline-block;
+            margin-top: 1rem;
         }
 
         .btn-home:hover {
@@ -56,6 +62,11 @@
         .leaf {
             font-size: 2rem;
         }
+
+        .countdown {
+            font-weight: bold;
+            color: #2e7d32;
+        }
     </style>
 </head>
 
@@ -64,8 +75,20 @@
         <h1>404</h1>
         <p class="leaf">🍃 Oops! This page got recycled into thin air.</p>
         <p>The page you’re looking for doesn’t exist or has been moved.</p>
+        <p>You’ll be redirected to the <span class="countdown" id="counter">5</span> in seconds...</p>
         <a href="index.html" class="btn-home">⬅ Back to Home</a>
     </div>
+
+    <script>
+        // Countdown script
+        let count = 5;
+        const counter = document.getElementById("counter");
+        const interval = setInterval(() => {
+            count--;
+            counter.textContent = count;
+            if (count === 0) clearInterval(interval);
+        }, 1000);
+    </script>
 </body>
 
 </html>
